# HandwrittenDigitRecogDemo

./: .gitignore  README.md  local.properties  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/Mnist/models/: LeNet_p19-sim.param  LeNet_p20-sim.id.h  LeNet_p20-sim.mem.h  LeNet_p20-sim.onnx  LeNet_p27_sim.param
app/src/main/cpp/: DigitRecog.cpp  DigitRecog.h  ImgFormatConverter.cpp  ImgFormatConverter.h  QualityDetect.cpp  QualityDetect.h  RemoveBackgroud.cpp  RemoveBackgroud.h  main_jni.cpp
app/src/main/cpp/include/: layer_type_enum.h
app/src/main/cpp/include/modelNetId/: LeNet_p27_sim.id.h
app/src/main/java/com/example/paxsz/handwritedigitrecognize/: HandWriteView.java  MainActivity.java  Utils.java
app/src/main/java/paxsz/ai/: CpuUtils.java  HwDr.java
app/src/main/res/drawable/: draw_background.xml
app/src/main/res/layout/: activity_main.xml
docs/: 手写数字识别模型在Android端的部署_研发二部_王玉.pptx
gradle/wrapper/: gradle-wrapper.properties
